tests/golden/type_errors/contextual_lambda_parameter_conflict.cd
struct Point { x: number }

let score: fun(Point): number = fun (p: string): number {
  return 0;
};
