tests/golden/type_errors/contextual_lambda_parameter_conflict.err
Type error at 3:38: parameter `p` expects Point, got string
  let score: fun(Point): number = fun (p: string): number {
                                       ^
